# building-graphql-apis-with-python

./: README.md  introduction.py  main.py  pyproject.toml  requirements.txt
app/: main.py  utils.py
app/db/: data.py  database.py  models.py
app/gql/: mutations.py  queries.py  types.py
app/gql/employer/: mutations.py
app/gql/job/: mutations.py
app/gql/job_application/: mutations.py
app/gql/user/: mutations.py
app/settings/: config.py
