[project]
name = "building-graphql-apis-with-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi>=0.116.1",
    "graphene>=3.4.3",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.42",
    "starlette-graphene3>=0.6.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
